# ann_benchmark

./: CMakeLists.txt  Dockerfile  README.md  build.sh
cmake/: GitConfig.cmake  MKLConfig.cmake
cmake/patches/: diskann_override.json
src/: bindata.h  diskann_wrapper.h  groudtruth.h  test_cagra.cu  test_cagra_configs.sh  test_cagra_cuvs.cu  test_cagra_netease.cu  test_ivf_flat.cu  test_ivf_flat_cuvs.cu  test_ivf_flat_netease.cu  test_ivf_pq.cu  test_ivf_pq_cuvs.cu  test_vamana_configs.sh  test_vamana_cuvs.cu  test_vamana_netease.cu  utils.h
